[package]
authors = ["Nicolas Grislain <ng@sarus.tech>"]
name = "qrlew"
version = "1.0.0"
edition = "2021"
description = "Sarus Qrlew Engine"
documentation = "https://docs.rs/qrlew"
readme = "README.md"
homepage = "https://sarus.tech/"
repository = "https://github.com/Qrlew/qrlew"
license = "Apache-2.0"
keywords = ["sql", "data"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rand = "0.8"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
itertools = "0.11"
paste = "1.0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.36.1"
dot = "0.1"
base64 = "0.21"
rusqlite = { version = "0.29", features = ["chrono"], optional = true }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.29", features = [ "tokio-pg" ] }
statrs = "0.16.0"

[features]
# Test on SQLite
sqlite = ["dep:rusqlite"]
# All injections are checked when built
checked_injections = []
