[package]
authors = ["Nicolas Grislain <ng@sarus.tech>"]
name = "qrlew"
version = "0.9.17"
edition = "2021"
description = "Sarus Qrlew Engine"
documentation = "https://docs.rs/qrlew"
readme = "README.md"
homepage = "https://sarus.tech/"
repository = "https://github.com/Qrlew/qrlew"
license = "Apache-2.0"
keywords = ["sql", "data"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rand = "0.8"
log = "0.4"
env_logger = "0.11"
colored = "2.0"
itertools = "0.12"
paste = "1.0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.43"
dot = "0.1"
base64 = "0.21"
rusqlite = { version = "0.30", features = ["chrono"], optional = true }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
rust_decimal = { version = "1.29", features = [ "tokio-pg" ] }
statrs = "0.16.0"
sqlx = { version = "0.6.3", features = ["mssql", "runtime-tokio-native-tls", "offline", "any"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# bigquery dependencies
gcp-bigquery-client = { version = "0.18", optional = true }
wiremock = { version = "0.5.19", optional = true }
tempfile = { version = "3.6.0", optional = true }

[features]
# Use SQLite for tests and examples
sqlite = ["dep:rusqlite"]
mssql = ["dep:sqlx", "dep:tokio"]
bigquery = ["dep:gcp-bigquery-client", "dep:wiremock", "dep:tempfile"]
# Tests
checked_injections = []
# Multiplicity features are tested on large datasets (may take too much memory)
tested_sampling_adjustment = []
# Display graphviz (may take long)
graphviz_display = []
